addressed some styling and legibility issues. Pics are uniform now. Text more legible. No inline styles

--- a/public/stylesheets/portfolioStyles.css
+++ b/public/stylesheets/portfolioStyles.css
@@ -3,7 +3,7 @@ body {
 }
 
 p {
-	font-size: 1.5em; 
+	font-size: 2em; 
 	font-weight: bold; 
 	font-family: Serif;
 }
@@ -15,38 +15,51 @@ span {
 }
 
 #navigation {
-  background-color: #755b33;
+  	background-color: #755b33;
+	text-shadow: 1px 1px black;
 }
 
 #about {
-  background-color: #003500;
+  	background-color: #003500;
+	color: white;
+	text-shadow: 2px 2px black;
   /*background-color: #3b873c;*/
 }
 
 #projects {
-  background-color: #93d882;
-  color: white;
+  	background-color: #93d882;
+  	color: white;
+	text-shadow: 2px 2px black;
 }
 
 #contact {
-  background-color: #003500;
-  color: white;
+  	background-color: #003500;
+  	color: white;
+	padding-bottom: 50px;
+}
+
+#projects div:first-child {
+	padding: 30px 0px 30px 0px;
+}
+
+#contact div:first-child{
+	padding: 30px 30px 0p 0px
+}
+
+#contact p {
+	font-size: 1.5em;
+}
+
+#about div:first-child {
+	padding: 30px 30px 0px 0px;
 }
 
 .web {
   background-color: #755b33;
 }
 
-.navbar.scrolled {
-	background-color: #755b33; 
-}
-
-.about-text {
-  color: white;
-}
-
 .selfie {
-	display inline;
+	display: inline;
 }
 
 .sample-links {
@@ -57,12 +70,14 @@ span {
 	margin-bottom: 0px;
 }
 
-.float-left {
-	padding-top: 16.75px;
-	padding-bottom: 16.75px;
-}
-
-.img-thumbnail {
+.content {
+	width: 100%;
+	height: 350px;
+	padding: 30px;
+	margin: 10px 0px 10px 0px;
+	display: flex;
+	align-items: center;
+	box-sizing: border-box;
 	background: #5A3F37;  /* fallback for old browsers */
 	background: -webkit-linear-gradient(to right, #2C7744, #5A3F37);  /* Chrome 10-25, Safari 5.1-6 */
 	background: linear-gradient(to right, #2C7744, #5A3F37); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -80,4 +95,12 @@ span {
  left: 0;
  z-index: 1;
  margin: auto;
+}
+
+.control-label {
+	font-size: 1.3em;
+}
+
+.navbar.scrolled {
+	background-color: #755b33; 
 }
